# cloud-security-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  security-agent.yml  terraform-validate.yml
automation/: __init__.py  ai_agent.py  config.py  github_manager.py  openrouter_client.py  task_generator.py
docs/: architecture.md  changelog.md  reporting_guide.md  security-decisions.md  threat-model.md
docs/compliance/: cis_aws_1_5_0.md
docs/detectors/: public_storage_bucket.md  public_storage_buckets.md  s3_public_access.md
docs/playbooks/: compromised_credentials.md
infra/aws/cloudtrail/: main.tf  outputs.tf  variables.tf
infra/aws/iam_baseline/: main.tf  outputs.tf  variables.tf
infra/aws/s3_secure_bucket/: README.md  main.tf  outputs.tf  variables.tf
infra/azure/nsg_baseline/: main.tf  outputs.tf  variables.tf
research/: aws-security-notes.md  cloud-threats-2024.md  guardduty_findings_analysis.md  owasp_top10_cloud_mapping.md
src/compliance/: __init__.py  cli.py  engine.py  models.py
src/compliance/checks/cis_aws_1_5_0/: iam_checks.py
src/compliance/cis_aws/: __init__.py  encryption_checks.py  iam_checks.py  logging_checks.py  networking_checks.py
src/detectors/: __init__.py  cli.py  ebs_encryption.py  engine.py  iam_wildcard_action_detector.py  models.py  public_storage_bucket.py  public_storage_bucket_detector.py  public_storage_detector.py  s3_public_access.py  s3_public_access_block.py  s3_public_access_detector.py
src/detectors/aws/: __init__.py  rds.py  s3_public_access.py
src/detectors/cloudtrail/: __init__.py  iam_changes.py  logging_disabled.py  root_login.py  security_group_changes.py
src/detectors/rules/: s3_exfil.py
src/detectors/storage/: cloud_providers.py  models.py
src/security_scanner/: __init__.py  base_scanner.py  cli.py  models.py  report.py  severity.py
src/security_scanner/aws/: __init__.py  cloudtrail_scanner.py  iam_scanner.py  s3_scanner.py
src/security_scanner/formatters/: sarif_formatter.py
src/security_scanner/reporting/: sarif_reporter.py
src/security_scanner/reporting/formatters/: csv_formatter.py
src/security_scanner/scanners/: eks_scanner.py
tests/: __init__.py  conftest.py  test_compliance_engine.py  test_detection_engine.py  test_ebs_encryption.py  test_eks_scanner.py  test_iam_scanner.py  test_iam_wildcard_action_detector.py  test_public_storage_detector.py  test_s3_exfil.py  test_s3_public_access_detector.py  test_s3_scanner.py  test_severity.py
tests/compliance/: test_cis_aws_1_5_0.py
tests/compliance/checks/: test_cloudtrail_checks.py  test_iam_checks.py
tests/detectors/: test_public_storage_bucket.py  test_public_storage_bucket_detector.py  test_s3_public_access.py  test_s3_public_access_block.py  test_s3_public_access_detector.py
tests/detectors/aws/: s3_public_access_test.py  test_rds.py
tests/detectors/storage/: test_cloud_providers.py  test_public_access_detector.py  test_public_bucket_detector.py
tests/detectors/storage/fixtures/: aws_s3_public_policy.json
tests/fixtures/cdk/s3_public_access_block/: app.ts
tests/fixtures/terraform/s3_public_access_block/: main.tf
tests/security_scanner/formatters/: test_sarif_formatter.py
tests/security_scanner/reporting/: test_sarif_reporter.py
tests/unit/: test_formatters.py  test_reporting_engine.py
